Bugfix
Added a white-space property for blocklevel left menu items so that collapsing
the menu doesn't cause the menu item labels to cascade to a new line.

Also removed spaces between menu items and icons because this causes
misalignment.

--- a/styles/main/_leftMenu.scss
+++ b/styles/main/_leftMenu.scss
@@ -20,6 +20,10 @@
 	color: #818181;
 	display: block;
 	transition: 0.3s;
+
+	&.linkMenu {
+		white-space: nowrap;
+	}
 }
 
 /* When you mouse over the navigation links, change their color */
